# pdchemchain

./: .gitignore  CONTRIBUTION.md  README.md  pyproject.toml
documentation/notebooks/: Lipinski_filter_example.py  contribution_examples.py
pdchemchain/: __init__.py  base.py  decorators.py  errormanager.py  io_utilities.py  logging.py  scripts.py  typing.py  utilities.py
pdchemchain/applications/: modelserver.py
pdchemchain/links/: __init__.py  chemistry.py  custom.py  dataframe.py  error.py  hpc.py  io.py  model.py
tests/: basetest.py  conftest.py  test_chain.py  test_unionlink.py
tests/links/chemistry/: test_ElementsInList.py  test_heavyatomcount.py  test_heteroatomratio.py  test_longestaliphaticchain.py  test_molfromsmiles.py  test_moltosmiles.py  test_numberoftokens.py  test_pandasaddmoleculecolumn.py  test_rdkitdescriptors.py  test_removestereomol copy.py  test_removestereosmiles.py  test_superparent.py
tests/links/custom/: test_linearmodelrow.py
tests/links/dataframe/: test_dfeval.py  test_dropcolumns.py  test_dropduplicates.py  test_keepcolumns.py  test_nulllink.py  test_query.py  test_roweval.py
tests/links/error/: test_striperrors.py
tests/links/hpc/: test_parallelpartitionprocessor.py  test_serialpartitionprocessor.py
tests/links/io/: test_fromfile.py  test_tofile.py
